chore(openapi): fix openapis
