# support-products/src/main/resources/oas/products-api.yaml
@@ -1,4 +1,4 @@
-openapi: 3.1.0
+openapi: 3.0.2
 
 info:
   title: Products Support API
@@ -7,7 +7,7 @@ info:
   contact:
     name: Gabriel M. Miranda
     email: gabrielmirandatt@gmail.com
-    url: gabrielmirandatt@gmail.com
+    url: https://gabrielmirandatt.com
   license:
     name: Apache 2.0
     url: 'https://www.apache.org/licenses/LICENSE-2.0'
@@ -32,11 +32,14 @@ paths:
           explode: true
           schema:
             type: string
-            item:
-              $ref: '#/components/schemas/ProductCategoryDTO'
+            $ref: '#/components/schemas/ProductCategoryDTO'
       responses:
         '200':
-          $ref: '#/components/responses/ProductResponse'
+          description: Product search response
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ProductResponse'
         '401':
           $ref: '#/components/responses/ErrorResponse'
         '403':
@@ -55,10 +58,17 @@ paths:
       description: Add new product in the restaurant
       operationId: addProduct
       requestBody:
-        $ref: '#/components/requestBodies/ProductRequest'
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/ProductRequest'
       responses:
         '201':
-          $ref: '#/components/responses/ProductCreated'
+          description: Product created response
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ProductCreated'
         '401':
           $ref: '#/components/responses/ErrorResponse'
         '403':
@@ -83,11 +93,14 @@ paths:
           description: ID of product to return
           required: true
           schema:
-            type: integer
-            format: int64
+            type: string
       responses:
         '200':
-          $ref: '#/components/responses/ProductResponse'
+          description: Product search response
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ProductResponse'
         '401':
           $ref: '#/components/responses/ErrorResponse'
         '403':
@@ -113,8 +126,7 @@ paths:
           description: Product id to delete
           required: true
           schema:
-            type: integer
-            format: int64
+            type: string
       responses:
         '204':
           description: OK
@@ -143,11 +155,14 @@ paths:
           explode: true
           schema:
             type: string
-            item:
-              $ref: '#/components/schemas/ProductCategoryDTO'
+            $ref: '#/components/schemas/ProductCategoryDTO'
       responses:
         '200':
-          $ref: '#/components/responses/IngredientResponse'
+          description: Ingredient search response
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/IngredientResponse'
         '401':
           $ref: '#/components/responses/ErrorResponse'
         '403':
@@ -166,10 +181,17 @@ paths:
       description: Add new ingredient in the restaurant
       operationId: addIngredient
       requestBody:
-        $ref: '#/components/requestBodies/IngredientRequest'
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/IngredientRequest'
       responses:
         '201':
-          $ref: '#/components/responses/IngredientCreated'
+          description: Ingredient created response
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/IngredientCreated'
         '401':
           $ref: '#/components/responses/ErrorResponse'
         '403':
@@ -221,10 +243,8 @@ components:
           type: string
           description: Product description for menu
         category:
-          type: string
+          $ref: '#/components/schemas/ProductCategoryDTO'
           description: Product category
-          item:
-            $ref: '#/components/schemas/ProductCategoryDTO'
         price:
           type: number
           description: Price of the product
@@ -246,10 +266,8 @@ components:
           type: string
           description: Name of the ingredient
         category:
-          type: string
+          $ref: '#/components/schemas/ProductCategoryDTO'
           description: Category of the ingredient
-          item:
-            $ref: '#/components/schemas/ProductCategoryDTO'
         price:
           type: number
           format: double
@@ -286,10 +304,8 @@ components:
           type: string
           description: Name of the Ingredient
         category:
-          type: string
+          $ref: '#/components/schemas/ProductCategoryDTO'
           description: Category of the Ingredient
-          item:
-            $ref: '#/components/schemas/ProductCategoryDTO'
         price:
           type: number
           format: double
@@ -317,13 +333,11 @@ components:
         ingredients:
           type: array
           description: Ingredients of the Product
-          item:
-            $ref: '#/components/responses/IngredientResponse'
+          items:
+            $ref: '#/components/schemas/IngredientResponse'
         category:
-          type: string
+          $ref: '#/components/schemas/ProductCategoryDTO'
           description: Category of the Product
-          item:
-            $ref: '#/components/schemas/ProductCategoryDTO'
         price:
           type: number
           format: double
